Wed Dec 15 13:10:34 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver.mpc:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender.mpc:
          Don't let the IDL compiler generate the executor code.

Wed Dec 15 12:46:48 UTC 2010  Marijke Hengstmengel  <mhengstmengelm@remedy.nl>

        * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnTA_conn_i.h:
        * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnTA_conn_i.cpp:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsTA_conn_i.cpp:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsTA_conn_i.h:
        Removed.

Wed Dec 15 12:23:48 UTC 2010  Marijke Hengstmengel  <mhengstmengelm@remedy.nl>

        *connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender_exec.cpp:
        *connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender_exec.h:
        *connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender.mpc:
        *connectors/ami4ccm/tests/OneProcess/Base/OneProcess.mpc:
        *connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender.mpc:
        *connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.cpp:
        *connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.h:
        *connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender_exec.h:
        *connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender.mpc:
        *connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender_exec.cpp:
        *connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.h:
        *connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender.mpc:
        *connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.cpp:
        *connectors/ami4ccm/tests/InterInArgs/Base/InterInArgsT.idl:
        *connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.h: