@@ -1,17 +1,41 @@
 // -*- C++ -*-
-//
 // $Id$
 
-#ifndef CIAO_HELLO_SENDER_EXEC_H_
-#define CIAO_HELLO_SENDER_EXEC_H_
+/**
+ * Code generated by the The ACE ORB (TAO) IDL Compiler v1.8.3
+ * TAO and the TAO IDL Compiler have been developed by:
+ *       Center for Distributed Object Computing
+ *       Washington University
+ *       St. Louis, MO
+ *       USA
+ *       http://www.cs.wustl.edu/~schmidt/doc-center.html
+ * and
+ *       Distributed Object Computing Laboratory
+ *       University of California at Irvine
+ *       Irvine, CA
+ *       USA
+ * and
+ *       Institute for Software Integrated Systems
+ *       Vanderbilt University
+ *       Nashville, TN
+ *       USA
+ *       http://www.isis.vanderbilt.edu/
+ *
+ * Information about TAO is available at:
+ *     http://www.cs.wustl.edu/~schmidt/TAO.html
+ **/
+#ifndef CIAO_HELLO_SENDER_EXEC_JDPMZZ_H_
+#define CIAO_HELLO_SENDER_EXEC_JDPMZZ_H_
+
+#include /**/ "ace/pre.h"
 
 #include "Hello_SenderEC.h"
-#include "Hello_Sender_exec_export.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include /**/ "Hello_Sender_exec_export.h"
 #include "tao/LocalObject.h"
 #include "ace/Task.h"
 
@@ -51,40 +75,9 @@ namespace CIAO_Hello_Sender_Impl
     ::Hello::CCM_Sender_Context_var context_;
   };
 
-  class MyFoo_callback_exec_i
-    : public virtual ::Hello::CCM_AMI4CCM_MyFooReplyHandler,
-      public virtual ::CORBA::LocalObject
-  {
-  public:
-    MyFoo_callback_exec_i (void);
-    virtual ~MyFoo_callback_exec_i (void);
-
-    virtual void foo (::CORBA::Long ami_return_val, const char * answer);
-
-    virtual void foo_excep (::CCM_AMI::ExceptionHolder_ptr excep_holder);
-
-    // Hello Reply Handler
-    virtual void hello (::CORBA::Long answer);
-
-    virtual void hello_excep (::CCM_AMI::ExceptionHolder_ptr excep_holder);
-
-    // GET rw_attrib Reply Handler
-    virtual void get_rw_attrib (
-      ::CORBA::Short ami_return_val);
-    virtual void get_rw_attrib_excep (
-      ::CCM_AMI::ExceptionHolder_ptr excep_holder);
-
-    // SET rw_attrib Reply Handler
-    virtual void set_rw_attrib (void);
-    virtual void set_rw_attrib_excep (
-      ::CCM_AMI::ExceptionHolder_ptr excep_holder);
-
-    // ro_attrib Reply Handler
-    virtual void get_ro_attrib (
-      ::CORBA::Short ami_return_val);
-    virtual void get_ro_attrib_excep (
-      ::CCM_AMI::ExceptionHolder_ptr excep_holder);
-  };
+  /**
+   * Component Executor Implementation Class: Sender_exec_i
+   */
 
   class Sender_exec_i
     : public virtual Sender_Exec,
@@ -94,25 +87,104 @@ namespace CIAO_Hello_Sender_Impl
     Sender_exec_i (void);
     virtual ~Sender_exec_i (void);
 
-    virtual void
-    set_session_context (
-      ::Components::SessionContext_ptr ctx);
+    //@{
+    /** Supported operations and attributes. */
 
+    //@}
+
+    //@{
+    /** Component attributes and port operations. */
+    //@}
+
+    //@{
+    /** Operations from Components::SessionComponent. */
+    virtual void set_session_context (::Components::SessionContext_ptr ctx);
     virtual void configuration_complete (void);
-
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
+    //@}
 
+    //@{
+    /** User defined public operations. */
+
+    //@}
+
+  private:
+    ::Hello::CCM_Sender_Context_var ciao_context_;
+
+    //@{
+    /** Component attributes. */
+    //@}
+
+    //@{
+    /** User defined members. */
+
+    //@}
+
+    //@{
+    /** User defined private operations. */
   private:
     ::Hello::CCM_Sender_Context_var context_;
     asynch_foo_generator* asynch_foo_gen_;
     synch_foo_generator* synch_foo_gen_;
+
+    //@}
   };
 
-  extern "C" HELLO_SENDER_EXEC_Export ::Components::EnterpriseComponent_ptr
-  create_Hello_AMI_Sender_Impl (void);
-}
+  class AMI4CCM_MyFooReplyHandler_run_my_foo_i
+    : public ::Hello::CCM_AMI4CCM_MyFooReplyHandler,
+      public virtual ::CORBA::LocalObject
+    {
+    public:
+      AMI4CCM_MyFooReplyHandler_run_my_foo_i (void);
+      virtual ~AMI4CCM_MyFooReplyHandler_run_my_foo_i (void);
+
+      virtual void
+      foo (
+        ::CORBA::Long ami_return_val,
+        const char * answer);
+
+      virtual void
+      foo_excep (
+        ::CCM_AMI::ExceptionHolder_ptr excep_holder);
+
+      virtual void
+      hello (
+        ::CORBA::Long answer);
+
+      virtual void
+      hello_excep (
+        ::CCM_AMI::ExceptionHolder_ptr excep_holder);
+
+      virtual void
+      get_rw_attrib (
+        ::CORBA::Short rw_attrib);
+
+      virtual void
+      get_rw_attrib_excep (
+        ::CCM_AMI::ExceptionHolder_ptr excep_holder);
+
+      virtual void
+      set_rw_attrib (void);
+
+      virtual void
+      set_rw_attrib_excep (
+        ::CCM_AMI::ExceptionHolder_ptr excep_holder);
+
+      virtual void
+      get_ro_attrib (
+        ::CORBA::Short ro_attrib);
+
+      virtual void
+      get_ro_attrib_excep (
+        ::CCM_AMI::ExceptionHolder_ptr excep_holder);
+    };
+
+    extern "C" HELLO_SENDER_EXEC_Export ::Components::EnterpriseComponent_ptr
+    create_Hello_Sender_Impl (void);
+  }
+
+#include /**/ "ace/post.h"
 
 #endif /* ifndef */
-
