@@ -1,3 +1,10 @@
+Wed Dec 15 13:15:48 UTC 2010  Marijke Hengstmengel  <mhengstmengelm@remedy.nl>
+
+        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
+        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
+        * connectors/ami4ccm/examples/Hello/descriptors/Plan.cdp:
+        Generate ReplyHandler in exec with -Gex option.
+
 Wed Dec 15 13:10:34 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver.mpc:
